PyMaker/datas/object2/RawHTML/i6801/Python_DOC_referPages.how-is-exception-syntax-in-python-3.txt
<div class="post-text" itemprop="text">
<p>I'm using SMTP and SSH libs, it works all fine in Python 2.7, but there is a problem in Python3.
examples:</p>
<pre><code>try:
    server.login(user, passwd)
    flag = 0
except smtplib.SMTPException, err:
</code></pre>
<p>and</p>
<pre><code>    try:
        ssh = paramiko.SSHClient()
        ssh.set_missing_host_key_policy(paramiko.AutoAddPolicy())
        if timeout_sec is not None:
            ssh.connect(target, username='', password='', timeout=timeout_sec)
        else:
            ssh.connect(target, username='', password='')
        exit = 0
        break
    except paramiko.ssh_exception.AuthenticationException, ssherr:
</code></pre>
<p>the exception examples are not working. How can I fix this?</p>
<pre><code>    except paramiko.ssh_exception.AuthenticationException, ssherr:
                                                         ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code>except smtplib.SMTPException as err:

except paramiko.ssh_exception.AuthenticationException as ssherr:
</code></pre>
<p>See the docs at <a href="https://docs.python.org/3/reference/compound_stmts.html#the-try-statement" rel="nofollow noreferrer">https://docs.python.org/3/reference/compound_stmts.html#the-try-statement</a></p>
</div>
<span class="comment-copy">Python 3 requires the <code>as</code> syntax. The comma syntax is from Python 2.x. The most recent versions of Python 2.x (2.6/2.7) support <code>as</code> syntax so it should be preferred.</span>
